Resolves: tdf#93818 crash on loading certain lwp

Change-Id: I11f523a0936b843155f3b47139d0fc58d4d0342b
(cherry picked from commit cc1273543f4084a779a2b0400c22466672557a95)
Reviewed-on: https://gerrit.libreoffice.org/19242
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>